# port-whisperer

./: .gitignore  CMakeLists.txt  README.md  install.sh
.github/workflows/: release.yml
cmake/: Dependencies.cmake
src/: detection.cpp  detection.hpp  display.cpp  display.hpp  docker.cpp  docker.hpp  main.cpp  models.hpp  process.cpp  process.hpp  scanner.cpp  scanner.hpp  util.cpp  util.hpp
src/platform/: darwin.cpp  linux.cpp  platform.hpp
tests/: CMakeLists.txt
